# haskell

./: README.md
mkdeb/: CHANGELOG.md  LICENSE  Main.hs  mkdeb.cabal
samples/: .gitignore  .vimrc  0010-hello-world.hs  0020-first-type.hs  0021-first-type.hs  0030-lists.hs  0031-lists.hs  0110-formatting.hs  Makefile  hello-world.hs
